--- a/manifest.json
+++ b/manifest.json
@@ -8,9 +8,49 @@
     "theme_color": "rgb(255 218 185)",
     "icons": [
       {
-        "src": "/assets/images/icons/", 
+        "src": "/assets/images/icons/icon-192x192.png", 
         "sizes": "192x192",
         "type": "image/png"
+      },
+      {
+        "src": "/assets/images/icons/icon-384x384.png", 
+        "sizes": "384x384",
+        "type": "image/png"
+      },
+      {
+        "src": "/assets/images/icons/icon-512x512.png", 
+        "sizes": "512x512",
+        "type": "image/png"
+      },
+      {
+        "src": "/assets/images/icons/0-star.svg", 
+        "sizes": "any",
+        "type": "image/svg"
+      },
+      {
+        "src": "/assets/images/icons/1-star.svg", 
+        "sizes": "any",
+        "type": "image/svg"
+      },
+      {
+        "src": "/assets/images/icons/2-star.svg", 
+        "sizes": "any",
+        "type": "image/svg"
+      },
+      {
+        "src": "/assets/images/icons/3-star.svg", 
+        "sizes": "any",
+        "type": "image/svg"
+      },
+      {
+        "src": "/assets/images/icons/4-star.svg", 
+        "sizes": "any",
+        "type": "image/svg"
+      },
+      {
+        "src": "/assets/images/icons/5-star.svg", 
+        "sizes": "any",
+        "type": "image/svg"
       }
     ]
   }
