edit manifest icons and minor edit sw.js

--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,11 @@
         "type": "image/png"
       },
       {
+        "src": "/assets/images/icons/icon-265x265.png", 
+        "sizes": "384x384",
+        "type": "image/png"
+      },
+      {
         "src": "/assets/images/icons/icon-384x384.png", 
         "sizes": "384x384",
         "type": "image/png"
@@ -21,36 +26,6 @@
         "src": "/assets/images/icons/icon-512x512.png", 
         "sizes": "512x512",
         "type": "image/png"
-      },
-      {
-        "src": "/assets/images/icons/0-star.svg", 
-        "sizes": "any",
-        "type": "image/svg"
-      },
-      {
-        "src": "/assets/images/icons/1-star.svg", 
-        "sizes": "any",
-        "type": "image/svg"
-      },
-      {
-        "src": "/assets/images/icons/2-star.svg", 
-        "sizes": "any",
-        "type": "image/svg"
-      },
-      {
-        "src": "/assets/images/icons/3-star.svg", 
-        "sizes": "any",
-        "type": "image/svg"
-      },
-      {
-        "src": "/assets/images/icons/4-star.svg", 
-        "sizes": "any",
-        "type": "image/svg"
-      },
-      {
-        "src": "/assets/images/icons/5-star.svg", 
-        "sizes": "any",
-        "type": "image/svg"
       }
     ]
   }
